mengubah warna tombol

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <form>
                         <div class="mb-3">
                           <label for="name" class="form-label">Nama Lengkap</label>
-                          <input type="email" class="form-control" id="name" aria-describedby="name">
+                          <input type="text" class="form-control" id="name" aria-describedby="name">
                         </div>
                         <div class="mb-3">
                           <label for="email" class="form-label">Email </label>
@@ -146,7 +146,7 @@
                             <label for="pesan" class="form-label">Pesan</label>
                             <textarea class="form-control" id="pesan" rows="3"></textarea>
                           </div>
-                        <button type="submit" class="btn btn-success">Kirim</button>
+                        <button type="submit" class="btn btn-danger">Kirim</button>
                       </form>
                 </div>
             </div>
