--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- akhir my css -->
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- akhir AOS -->
   </head>
   <body id="home">
 
@@ -40,9 +43,9 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-        <img src="img/ozi.jpg" alt="foto ozi" width="200px" class="rounded-circle img-thumbnail">
+        <img src="img/ozi.jpg" alt="foto ozi" width="200px" class="rounded-circle img-thumbnail" />
         <h1 class="display-4">Badiatul Roziqin</h1>
-        <p class="lead">Student | Web Development</p>
+        <p class="lead"></p>
         <?xml version="1.0" standalone="no"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L40,96C80,128,160,192,240,181.3C320,171,400,85,480,69.3C560,53,640,107,720,149.3C800,192,880,224,960,224C1040,224,1120,192,1200,165.3C1280,139,1360,117,1400,106.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
       </section>
     <!-- akhir jumbotron -->
@@ -56,10 +59,10 @@
                 </div>
             </div>
             <div class="row justify-content-center fs-5 text-center">
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-right">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero laboriosam voluptates soluta consequatur voluptas eum totam dignissimos aliquam voluptate natus.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, repudiandae dolore illo eligendi cupiditate ratione veniam sunt explicabo, deserunt quas saepe vitae, pariatur beatae dolorum!</p>
                 </div>
             </div>
@@ -78,7 +81,7 @@
             </div>
             <div class="row justify-content-center mb-3">
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500">
                         <img src="img/projects/1.jpg" class="card-img-top" alt="projects 1">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -86,32 +89,32 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/projects/7.jpg" class="card-img-top" alt="projects 1">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500"  data-aos-delay="100">
+                        <img src="img/projects/7.jpg" class="card-img-top" alt="projects 2">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/projects/4.jpg" class="card-img-top" alt="projects 1">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
+                        <img src="img/projects/4.jpg" class="card-img-top" alt="projects 3">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/projects/5.jpg" class="card-img-top" alt="projects 1">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
+                        <img src="img/projects/5.jpg" class="card-img-top" alt="projects 4">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <img src="img/projects/6.jpg" class="card-img-top" alt="projects 1">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
+                        <img src="img/projects/6.jpg" class="card-img-top" alt="projects 5">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
@@ -123,10 +126,74 @@
     </section>
     <!-- akhir project -->
 
+    <!-- Gallery -->
+      <section id="gallery">
+        <div class="container">
+          <div class="row text-center mb-3">
+            <div class="col">
+                <h2>Gallery</h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/1.jpg" alt="foto1" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/2.jpg" alt="foto2" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/3.jpg" alt="foto3" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/4.jpg" alt="foto4" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/5.jpg" alt="foto5" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/6.jpg" alt="foto6" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/7.jpg" alt="foto7" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/8.jpg" alt="foto8" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/9.jpg" alt="foto9" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/thumbnail/10.jpg" alt="foto10" width="300" class="img-fluid gallery-img">
+            </a>
+          </div>
+        </div>
+        </div>
+      </section>
+    <!-- akhir Gallery -->
+
     <!-- Contact -->
     <section id="contact">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center mb-3">
                 <div class="col">
                     <h2>Contact Me</h2>
                 </div>
@@ -175,6 +242,32 @@
     <!-- script javascript -->
     <script src="js/bootstrap.js"></script>
     <script src="js/pooper.min.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'fade-down';
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', {duration: 2, delay: 1.5, text: 'Student | Web Development' });
+      gsap.from('.jumbotron img', {duration: 1, rotateY: 360, opacity: 0 });
+      gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce' });
+      gsap.from('.display-4', {duration: 1, x: -50, opacity: 0, delay: 0.5, ease: 'back' });
+    </script>
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbz4MstIg3zERjG3p8Evc8JpsrTdzdmWbpX__aC73pal0tYPQXERL5xsksLXIe1Tfuc/exec'
