menambahkan section gallery

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#gallery">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
@@ -152,7 +155,7 @@
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/4.jpg" alt="foto4" width="300" class="img-fluid gallery-img">
+              <img src="img/gallery/thumbnail/11.jpg" alt="foto4" width="300" class="img-fluid gallery-img">
             </a>
           </div>
           <div class="col-md-3">
@@ -162,7 +165,7 @@
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/6.jpg" alt="foto6" width="300" class="img-fluid gallery-img">
+              <img src="img/gallery/thumbnail/13.jpg" alt="foto6" width="300" class="img-fluid gallery-img">
             </a>
           </div>
           <div class="col-md-3">
@@ -172,7 +175,7 @@
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallery/thumbnail/8.jpg" alt="foto8" width="300" class="img-fluid gallery-img">
+              <img src="img/gallery/thumbnail/12.jpg" alt="foto8" width="300" class="img-fluid gallery-img">
             </a>
           </div>
           <div class="col-md-3">
