--- a/index.html
+++ b/index.html
@@ -125,6 +125,27 @@
                 </div>
             </div>
         </div>
+
+        <section id="my-keyboards">
+          <div class="container">
+            <div class="row text-center mb-3">
+              <div class="col">
+                <h2>My Keyboards</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 col-lg-4 mb-3">
+                <div class="keyboard-box">
+                  <h4 class="keyboard-name">
+                    Keyboard Saya
+                  </h4>
+                  <a href="#" class="btn btn-light">Show Details</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <?xml version="1.0" standalone="no"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L40,112C80,96,160,64,240,85.3C320,107,400,181,480,186.7C560,192,640,128,720,101.3C800,75,880,85,960,106.7C1040,128,1120,160,1200,170.7C1280,181,1360,171,1400,165.3L1440,160L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     </section>
     <!-- akhir project -->
