--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="#projects">Projects</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#my-keyboards">My Keyboards</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#gallery">Gallery</a>
               </li>
               <li class="nav-item">
@@ -136,10 +139,23 @@
             <div class="row">
               <div class="col-md-6 col-lg-4 mb-3">
                 <div class="keyboard-box">
-                  <h4 class="keyboard-name">
-                    Keyboard Saya
-                  </h4>
-                  <a href="#" class="btn btn-light">Show Details</a>
+                  <h4 class="keyboard-name">Keychron K2</h4>
+                  <img src="img/gallery/keyboards/3.png" alt="Keychron K2" class="keyboard-img"/>
+                  <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-4 mb-3">
+                <div class="keyboard-box">
+                  <h4 class="keyboard-name">Womier RGB</h4>
+                  <img src="img/gallery/keyboards/1.png" alt="Womier RGB" class="keyboard-img"/>
+                  <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-4 mb-3">
+                <div class="keyboard-box">
+                  <h4 class="keyboard-name">Red Dragon</h4>
+                  <img src="img/gallery/keyboards/2.png" alt="Red Dragon" class="keyboard-img"/>
+                  <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
                 </div>
               </div>
             </div>
@@ -319,6 +335,15 @@
           })
           .catch(error => console.error('Error!', error.message))
       })
+    </script>
+
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelectorAll('.keyboard-box '), {
+        max: 30,
+        speed: 800,
+        glare: true,
+      });
     </script>
     <!-- akhir script javascript -->
   </body>
